2009-05-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use s itself instead of !s.bad()
	* src/CookieStorage.cc

2009-05-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented --on-download-* option and --save-cookies option in man
	page.	
	* doc/aria2c.1.txt

2009-05-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Set possible values for --load-cookie option to "/path/to/file".
	* src/OptionHandlerFactory.cc

2009-05-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added --save-cookies option.
	* src/Cookie.cc
	* src/Cookie.h
	* src/CookieStorage.cc
	* src/CookieStorage.h
	* src/MultiUrlRequestInfo.cc
	* src/OptionHandlerFactory.cc
	* src/prefs.cc
	* src/prefs.h
	* src/usage_text.h
	* test/CookieStorageTest.cc
	* test/CookieTest.cc

2009-05-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed tellAll XML-RPC command because its reponse tends to be
	big if stopped/waiting downloads pile up.
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h

2009-05-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added the ability to execute command when download starts and
	stops. You can also specify command for particular cases such as
	complete/error download.  Added --on-download-start,
	--on-download-stop, --on-download-complete and --on-download-error
	option.
	* src/OptionHandlerFactory.cc
	* src/RequestGroupMan.cc
	* src/prefs.cc
	* src/prefs.h
	* src/usage_text.h

2009-05-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed test error
	* test/BencodeTest.cc

2009-05-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added unit tests.
	* test/XmlRpcMethodTest.cc

2009-05-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Made exception message more verbose.
	* src/bencode.cc

2009-05-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Abbreviated KiB/s to KiBs and its precision decreased to 1 to save