@@ -71,10 +71,20 @@ if test "x$with_sqlite3" = "xyes"; then
 fi
 
 if test "x$with_gnutls" = "xyes"; then
-  AM_PATH_LIBGNUTLS([1.2.9], [have_libgnutls=yes])
+  # gnutls >= 2.8 doesn't have libgnutls-config anymore.
+  # First check the presence of libgnutls using pkg-config.
+  PKG_CHECK_MODULES([LIBGNUTLS], [gnutlsx >= 1.2.9],
+                    [have_libgnutls=yes], [have_libgnutls=no])
+  # If no libgnutls found by pkg-config, fall back to old macro
+  if test "x$have_libgnutls" = "xno"; then
+    AC_MSG_WARN([$LIBGNUTLS_PKG_ERRORS])
+    AM_PATH_LIBGNUTLS([1.2.9], [have_libgnutls=yes])
+  fi
   if test "x$have_libgnutls" = "xyes"; then
     AC_DEFINE([HAVE_LIBGNUTLS], [1], [Define to 1 if you have libgnutls.])
   fi
+  AC_SUBST(LIBGNUTLS_LIBS)
+  AC_SUBST(LIBGNUTLS_CFLAGS)
 fi
 
 if test "x$have_libgnutls" = "xyes"; then
